# hi_ive_demo

./: .vscode-ctags  CMakeLists.txt  readme
include/: sample_comm.h
src/: main.cpp
src/common/: sample_comm.h  sample_comm_audio.c  sample_comm_audio.origin  sample_comm_isp.c  sample_comm_venc.c  sample_comm_vi.c
